# ag-graph

./: AG.hs  Dag.hs  DagFree.hs  DagSimple.hs  Graph.hs  GraphFree.hs  GraphFreeNonEmpty.hs  LICENSE  Paper.hs  Projection.hs  ProjectionSimple.hs  README.md  Rename.hs  Size.hs  TODO  ag-graph.cabal  paper.hs  runbenchmarks
bench/: Bench.hs  SplitCsv.hs
examples/: Circuit.hs  Feldspar.hs  LeavesBelow.hs  Paper.hs  Rename.hs  Repmin.hs  RepminPAG.hs  Size.hs  TypeInf.hs  TypeInfTest.hs
src/: AG.hs  Dag.hs  DagSimple.hs  Dot.hs  Mapping.hs  PAG.hs  Projection.hs  Tree.hs  Variables.hs
src/AG/: Internal.hs
src/Dag/: AG.hs  Internal.hs  PAG.hs  Rename.hs  Render.hs
src/DagSimple/: AG.hs  Internal.hs
src/PAG/: Internal.hs  Product.hs  Projection.hs
src/PAG/Projection/: Simple.hs  TypeFam.hs
src/Projection/: Simple.hs  TypeFam.hs
