name:                ag-graph
version:             0.1
synopsis:            Attribute grammars on graphs
license:             BSD3
license-file:        LICENSE
author:              Patrick Bahr and Emil Axelsson
copyright:           Copyright (c) 2014 Patrick Bahr and Emil Axelsson
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    AG,
    Graph,
    Paper

  build-depends:
    base <5,
    containers,
    unordered-containers,
    mtl,
    safe

  default-language: Haskell2010

benchmark bench
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   bench
  main-is:          Bench.hs
  build-depends:    ag-graph, base, containers, criterion, deepseq
  ghc-options:      -O2
